# Stack

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
.github/workflows/: cmake.yml
inc/: cmn_header.h  stack.h
main/: CMakeLists.txt
main/inc/: stack.h
main/src/: stack.c
src/: stack.c  test.c
test/: CMakeLists.txt  tests.cpp
